Adding missing diff